# secretSantaScript

./: README.md  pyproject.toml  secret_santa.py
secretSantaScript/: secret_santa.py
secretSantaScript/resources/contacts/: contact_test_fail.csv  contacts.csv  contacts_test.csv
secretSantaScript/resources/email/: template.html
secretSantaScript/resources/properties/: properties.properties
tests/: test_secret_santa.py
