[tool.poetry]
name = "secretsantascript"
version = "0.1.0"
description = ""
authors = ["Patrick <patrick.guimaraes@laposte.net>"]

[tool.poetry.dependencies]
python = "^3.10"
secure-smtplib = "^0.1.1"
pdbpp = "^0.10.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
